# ChangeLog for sys-fs/fuse
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse/ChangeLog,v 1.50 2006/05/12 16:22:34 ranger Exp $

  12 May 2006; Brent Baude <ranger@gentoo.org> fuse-2.6.0_pre2.ebuild:
  Marking fuse-2.6.0_pre2 ~ppc64

  03 May 2006; Daniel Gryniewicz <dang@gentoo.org> fuse-2.6.0_pre2.ebuild:
  Marked stable on amd64 per bug# 131196

  02 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  fuse-2.6.0_pre2.ebuild:
  Stable on sparc wrt #131196

  30 Apr 2006; Joshua Jackson <tsunam@gentoo.org> fuse-2.6.0_pre2.ebuild:
  stable on x86; bug #131196

  28 Apr 2006; Joseph Jezak <josejx@gentoo.org> fuse-2.6.0_pre2.ebuild:
  Marked ppc stable for bug #131196.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-fuse-2.4.1-r1,
  files/digest-fuse-2.4.2, Manifest:
  Fixing SHA256 digest, pass four

*fuse-2.6.0_pre2 (26 Mar 2006)

  26 Mar 2006; Stefan Schweizer <genstef@gentoo.org> -fuse-2.5.0.ebuild,
  -fuse-2.5.0-r1.ebuild, -fuse-2.5.1.ebuild, +fuse-2.6.0_pre2.ebuild:
  version bump

  24 Mar 2006; Aron Griffis <agriffis@gentoo.org> fuse-2.5.2.ebuild:
  Mark 2.5.2 ~ia64

*fuse-2.5.2 (17 Feb 2006)

  17 Feb 2006; Stefan Schweizer <genstef@gentoo.org> +fuse-2.5.2.ebuild:
  version bump

  16 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org> fuse-2.4.2.ebuild:
  Stable on sparc

*fuse-2.5.1 (29 Jan 2006)

  29 Jan 2006; Stefan Schweizer <genstef@gentoo.org> +fuse-2.5.1.ebuild:
  version bump thanks to Thomas Meyer <thomas.mey@web.de> in bug 120736

*fuse-2.5.0-r1 (20 Jan 2006)

  20 Jan 2006; Stefan Schweizer <genstef@gentoo.org>
  +files/fuse-2.6.16.patch, +fuse-2.5.0-r1.ebuild:
  Fix compiling on 2.6.16 thanks to Patrizio Bassi <hetfield666@gmail.com> in
  bug 119532

  20 Jan 2006; Daniel Drake <dsd@gentoo.org> fuse-2.4.2.ebuild,
  fuse-2.5.0.ebuild:
  Readd build-on-demand support now that the eclass is fixed. Reported by Derk
  W te Bokkel in bug #117834

*fuse-2.5.0 (16 Jan 2006)
