@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/fuse
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse/ChangeLog,v 1.50 2006/05/12 16:22:34 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse/ChangeLog,v 1.51 2006/05/15 11:01:38 genstef Exp $
+
+  15 May 2006; Stefan Schweizer <genstef@gentoo.org>
+  -files/fuse-2.6.16.patch, -files/fuse-fix-memleak.patch,
+  -files/fusermount.patch, -fuse-2.4.1-r1.ebuild, -fuse-2.4.2.ebuild,
+  -fuse-2.5.2.ebuild, fuse-2.6.0_pre2.ebuild:
+  Add moduledb worlaround, remove old ebuilds
 
   12 May 2006; Brent Baude <ranger@gentoo.org> fuse-2.6.0_pre2.ebuild:
   Marking fuse-2.6.0_pre2 ~ppc64
